# flowerboard-backend

./: README.md  casbin.conf  config.py  database.py  main.py  pyproject.toml
auth/: __init__.py  base.py  perm.py  user.py
models/: __init__.py  school.py  stick.py  user.py
routers/: stick.py
